ontol/ontol-compiler/test-cases/error/rel/order.on
def struct (
    rel* // ERROR relation subject must be an entity
        order[]: text
)

def entity (
    rel. 'id': (rel* is: text)
    rel* 'field': text

    rel* order[
    ]: by_text_bug // ERROR order identifier must be a symbol in this domain

    rel* order[
    ]: ontol.ascending // ERROR order identifier must be a symbol in this domain

    rel* order[
    ]: 'by_text' // ERROR order identifier must be a symbol in this domain

    rel* order[
    ]: 42 // ERROR order identifier must be a symbol in this domain

    rel* order[ // ERROR order tuple parameters expected
    ]: by_text

    rel* order[
        rel* 0: 'missing' // ERROR TODO: no such field: `missing`
    ]: by_text

    rel* order[
        rel* 0: 'field'
        rel* direction: 'ASC' // ERROR TODO: invalid direction
    ]: by_text
)

def by_text_bug (rel* is: text)
sym { by_text }
